1) Aggiunta (senza implementazione) delle classi: Domanda, Indizio, PopupDomande, PopupIndizi, Sfida, Toolbar; 2) Modificato layout "toolbar.xml" e incluso in "activity_map.xml". Da completare e sistemare il layout; 3) Creato file "dimens.xml", per inserire i valori delle dimensioni e averle tutte in un unico file, un po' come "strings.xml" per le stringhe. Ho inserito qui la dimensione per la toolbar.
Se volete modificare qualche nome della classe fate pure, io le ho create giusto per averle nel progetto e avere presente che cosa dobbiamo ancora implementare.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -9,9 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapsActivity">
+        <include layout="@layout/toolbar"
+            android:id="@+id/toolbar">
+
+        </include>
         <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
             android:id="@+id/map"
             tools:context=".MapsActivity"
             android:name="com.google.android.gms.maps.SupportMapFragment" />
