--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -24,7 +24,10 @@
             android:layout_weight="50"
             android:layout_height="match_parent"
             android:text="Suggeritore"
-            />
+            android:background="#ffffbb49"
+            android:layout_margin="7dp"
+            android:textAlignment="center" />
+
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
