################ Fedebyes: -Added icon -Changed splash activity-activity.xml
first commit
###############

--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:backgroundTint="@color/white"
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+
     tools:context=".SplashScreenActivity"
-    android:background="@drawable/splash_background">
+    >
+    <ImageView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:src="@drawable/pinlogo"
+        android:id="@+id/pinlogo"
+        android:layout_margin="75dp" />
 
 </RelativeLayout>
